--- a/tensorflow.tex
+++ b/tensorflow.tex
@@ -270,7 +270,7 @@ Zu diesen gibt es noch weiter, welche in diversen Fällen benötigt werden wenn 
 \noindent
 Die Anzahl an mathematischen Funktionen ist um einiges sehr viel Größer als die hier erwähnten. 
 Diese hier repräsentieren lediglich die meist verwendeten Operationen. 
-Für weiter Informationen steht die online Dokumentation zur Verfügung. \footnote{Online Dokumentation: Math \url{https://www.tensorflow.org/api_guides/python/math_ops}}
+Für weiter Informationen steht die online Dokumentation zur Verfügung. \footnote{Online Dokumentation: Math  \url{https://www.tensorflow.org/api_guides/python/math_ops}}
 
 \subsubsection{Flusskontrolle}
 
@@ -607,15 +607,15 @@ Die Y-Achse gibt die konkreten Werte wieder, welche sich in dem Tensor über die
 \end{figure}
 
 \noindent
-Im Diagramm \ref{fig:Verteilungsdiagram}) wird ein Tensor mit 100 Werten dargestellt. 
+Im Diagramm \ref{fig:Verteilungsdiagram} wird ein Tensor mit 100 Werten dargestellt. 
 Dieser Tensor wurde mit einer Normalverteilung initialisiert, wobei die Standartabweichung bei $0.5$ liegt und der Median zu Beginn bei $0.2$ liegt, mit einer geringen Abweichung. 
-Die Linien in diesem Diagramm (\ref{fig:Verteilungsdiagram}) und ihre Einfärbungen präsentieren die Verteilung der Werte im beobachteten Tensor. 
+Die Linien in diesem Diagramm \ref{fig:Verteilungsdiagram} und ihre Einfärbungen präsentieren die Verteilung der Werte im beobachteten Tensor. 
 Die Verteilung muss von unten Nach oben gelesen werden, dabei ergibt die unterste Linie den minimal Wert der vorgekommen ist. 
 Die nächste Linie besagt, dass 7\% der Werte in dem Bereich zwischen dem geringsten und der zweiten Linie sich befinden, was inklusive des geringsten Wertes ist.  
 Der nächste Bereich definiert, wie in einer Normalverteilung, dass bis zu Ende dieses Bereiches 16\% darin befinden. 
 Im gesamten sind dies $9$ Markierungen mit 8 Bereichen, welche zusammen alle Werte im Tensor wieder spiegeln. 
 Diese Folge an prozentualen Anteilen lauten wie folgend: $min, 7\%, 16\%, 31\%, 50\%, 69\%, 84\%, 93\%, max$. 
-Im Diagramm (\ref{fig:VerteilungsdiagrammPython}) ist diese Verteilung besser ersichtlich, zusätzlich befinden sich in der Abbildung \ref{fig:Ergebnistensor} die Rohdaten der Diagramme. 
+Im Diagramm \ref{fig:VerteilungsdiagrammPython} ist diese Verteilung besser ersichtlich, zusätzlich befinden sich in der Abbildung \ref{fig:Ergebnistensor} die Rohdaten der Diagramme. 
 
 \begin{figure}
 	\centering
